[tool.poetry]
name = "niwa-grass-grower"
version = "0.1.0"
description = "A tool to backfill GitHub contributions"
authors = ["niwanowa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
